--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</div>
 
 	<div class="quiz-box custom-box hide">
-		<div class="icone-pequeno">
+		<div class="small-icon">
 		</div>
 		<div class="question-number">
 
