--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Show do Milhão</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="../jovensgenios/css/style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -76,8 +76,8 @@
 		<button type="button" class="btn" onclick="goToHome()">Página Principal</button>
 	</div>
 
-	<script src="../jovensgenios/js/perguntas.js"></script>
-	<script src="../jovensgenios/js/app.js"></script>
+	<script src="perguntas.js"></script>
+	<script src="app.js"></script>
 
 </body>
 
