--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	<meta charset="UTF-8">
 	<title>Show do Milhão</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="../jovensgenios/css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
 	<div class="home-box custom-box">
-		<img src="../jovensgenios/img/Jogodomilhao1999.png"><br><br>
+		<img src="img/Jogodomilhao1999.png"><br><br>
 		<h3>Bem vindo ao Show do Milhão! </h3>
 		<p>É hora de recordar o maior sucesso de audiência no final dos anos 90! Você se lembra do Show do Milhão,
 			apresentado por Silvio Santos? Agora você poderá reviver a emoção de estar em busca de 1 milhão de
@@ -76,8 +76,8 @@
 		<button type="button" class="btn" onclick="goToHome()">Página Principal</button>
 	</div>
 
-	<script src="../jovensgenios/js/perguntas.js"></script>
-	<script src="../jovensgenios/js/app.js"></script>
+	<script src="js/perguntas.js"></script>
+	<script src="js/app.js"></script>
 
 </body>
 
